grammar.txt
Grammar Definition for Bash POSIX Syntax

1. Terminals

Operators: 

  Redirections: >, >>, <, <<

  (?): &&, ||, |

  Subshells (?): (, )

  Expansions: *, $,=

Literals: 
  
  Words: representing general tokens like command names, filenames, etc.

2. Non-Terminals

  Script
  Command
  SimpleCommand
  Pipeline
  CommandList
  Redirection
  CompoundCommand
  Expression
  Assignment

3. Production Rules

Copy
Edit
Script           → CommandList
CommandList      → Command ( '&&' | '||' ) CommandList
                 | Command
Command          → SimpleCommand
                 | Pipeline
                 | CompoundCommand
SimpleCommand    → Assignment* WORD (Argument | Redirection)*
Assignment       → WORD '=' Expression
Argument         → WORD
Pipeline         → Command ( '|' Command )*
Redirection      → ( '>' | '>>' | '<' | '<<' ) WORD
CompoundCommand  → '(' CommandList ')'
Expression       → '$' WORD
                 | WORD

4. Operator Precedence (Highest to Lowest)

  (): Grouping commands  
  *, $, =: Parameter expansion, globbing, assignment
  Redirections: >, >>, <, <<
  Pipelining: |
  Logical Operators: &&, ||

5. Notes on Implementation

  Leftmost Derivation: 
  Always expand the leftmost non-terminal first. For instance, while parsing a=b && echo $b, begin by expanding the assignment a=b, then move to the logical operator &&, and finally parse the echo $b command.

  Recursive Descent Parsing:
  This grammar is mostly suitable for a recursive descent parser. Pay attention to left recursion in rules like CommandList, which may need to be restructured to avoid infinite recursion.
